bynkc/tests/fixtures/positive/76_multi_file_context/src/commerce/orders/helpers.bynk
context commerce.orders

fn OrderId.parse(value: String) -> Result[OrderId, ValidationError] {
  OrderId.of(value)
}
