bynkc/tests/fixtures/negative/67_provider_missing_operation/src/demo/svc.bynk
context demo.svc

capability Logger {
  fn log(m: String) -> Effect[()]
  fn error(m: String) -> Effect[()]
}

provides Logger = StubLogger {
  fn log(m: String) -> Effect[()] {
    Effect.pure(())
  }
}
